<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="bluetooth.sample.connection.fragment.userDetails.UserDetailsViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:visibility="@{viewModel.isLoading()?View.GONE:View.VISIBLE}">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@{viewModel.nameError?@drawable/error_text_input_layout_stroke_color:@drawable/text_input_layout_stroke_color}"
            android:gravity="start"
            android:hint="@string/enter_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={viewModel.name}"
            android:textAlignment="viewStart"
            android:textColor="@color/gray_600"
            android:textColorHint="@color/gray3"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinnerAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:selectedItemPosition="@{viewModel.agePosition}"
            android:spinnerMode="dropdown"
            android:background="@drawable/text_input_layout_stroke_color"
            android:padding="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@{viewModel.fatherNameError?@drawable/error_text_input_layout_stroke_color:@drawable/text_input_layout_stroke_color}"
            android:gravity="start"
            android:hint="@string/enter_father_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="10dp"
            android:text="@={viewModel.fatherName}"
            android:textAlignment="viewStart"
            android:textColor="@color/gray_600"
            android:textColorHint="@color/gray3"
            android:textSize="16sp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:onClick="@{()->viewModel.onCheckData()}"
            android:text="@string/update_data"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>